Add findings of Using axes()

--- a/Customizing plots/Customizing_plots.ipynb
+++ b/Customizing plots/Customizing_plots.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1tCQtXWHcU-SYIqpOtfPPzyhlR7fN4AWy",
-      "authorship_tag": "ABX9TyOakQbYxBIe/3gmuIJIwdZM",
+      "authorship_tag": "ABX9TyP9kGC45Ml8GCkwv2S3mfni",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -382,6 +382,17 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LL44sJpoSjQw",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Findings:**\n",
+        "1. As you can see, not only are there now two separate plots with their own axes, but the axes for each plot are slightly different."
       ]
     }
   ]
