Fitting Hierarchical Clustering to the Cereals

--- a/Cereal/Cereal.ipynb
+++ b/Cereal/Cereal.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "185qhjA_Cwgwj0nGQwWjUhu6ufK5-pbB_",
-      "authorship_tag": "ABX9TyPdG3/LvBmyG/nG7wD+AgI8",
+      "authorship_tag": "ABX9TyMDEiBKOIt5w/KJbE0uTNuo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,6 +66,8 @@
         "\n",
         "# Taking care of missing data\n",
         "from sklearn.impute import SimpleImputer\n",
+        "\n",
+        "from sklearn.cluster import AgglomerativeClustering\n",
         "\n",
         "from IPython.display import Image\n",
         "\n",
@@ -506,7 +508,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### **Finding the number of clusters from Dendrogram**"
+        "## **Finding the number of clusters from Dendrogram**"
       ]
     },
     {
@@ -556,6 +558,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0FPG1Ki6AWCt",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **Dendrogram with Cutting Point**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "__k6mfx69Cz3",
@@ -600,6 +612,52 @@
       "source": [
         "**Findings:**\n",
         "1. From the dendrogram, the largest distance that we can make vertically without the crossing any horinzontal line is the Blue one. If we draw a horizontal line as in the image, we'll get ***5*** clusters."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3BRM5b4B_O4j",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **Fitting Hierarchical Clustering to the Cereals**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xbIa_KoQ_dIQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "dc2f4b85-08db-4e93-8dd2-dd775cba54f0"
+      },
+      "source": [
+        "# affinity - The distance to the linkage\n",
+        "# linkage = 'ward' - Try to minimize the variance in each of the clusters\n",
+        "hc = AgglomerativeClustering(n_clusters = 5, affinity = 'euclidean', linkage = 'ward')\n",
+        "y_hc = hc.fit_predict(dataset.iloc[:, 2: 12].values)\n"
+      ],
+      "execution_count": 262,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 1, 2, 2, 0, 4, 4, 0, 0, 2, 4, 0, 4, 3, 4, 0, 0, 1, 4, 3, 1, 0,\n",
+              "       3, 4, 4, 4, 1, 3, 2, 4, 1, 0, 3, 3, 1, 4, 0, 4, 4, 4, 0, 3, 4, 1,\n",
+              "       3, 3, 3, 0, 4, 0, 3, 3, 2, 0, 1, 1, 3, 1, 2, 3, 1, 0, 0, 1, 1, 1,\n",
+              "       1, 0, 1, 4, 2, 4, 0, 4, 0, 0, 4])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 262
+        }
       ]
     },
     {
